--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
     background-position: center;
 }
 
+.header-text h1 span {
+    color: #D4AF37;
+}
+
 .container {
     padding: 10px 10%;
 }
@@ -102,6 +106,10 @@ nav ul li a:hover::after {
     flex-basis: 60%;
 }
 
+.about-col-2 h2 span {
+    color: #D4AF37;
+}
+
 .sub-title {
     font-size: 60px;
     font-weight: 600;
@@ -149,4 +157,60 @@ nav ul li a:hover::after {
 .tab-contents ul li span {
     color: #D4AF37;
     font-size: 17px;
+}
+
+.tab-contents {
+    display: none;
+}
+
+.tab-contents.active-tab {
+    display: block;
+}
+
+/*-------------services---------*/
+
+#services {
+    padding: 30px 0;
+
+}
+
+.services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 60px;
+    margin-top: 50px;
+}
+
+.services-list div {
+    background: #D4AF37;
+    color: black;
+    padding: 40px;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 300;
+
+}
+
+.sub-title span {
+    color: #D4AF37;
+}
+
+.services-list div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+
+}
+
+.services-list div h3 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.services-list div a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    margin-top: 30px;
+    display: inline-block;
 }
