--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ nav ul li a:hover::after {
     border-radius: 15px;
     font-size: 20px;
     font-weight: 300;
+    transition: background 0.5s, transform 0.5s;
 
 }
 
@@ -203,7 +204,6 @@ nav ul li a:hover::after {
 
 .services-list div h3 {
     font-size: 30px;
-    font-weight: 500;
     margin-bottom: 15px;
 }
 
@@ -213,4 +213,86 @@ nav ul li a:hover::after {
     font-size: 18px;
     margin-top: 30px;
     display: inline-block;
+}
+
+.services-list div:hover {
+    background-color: white;
+    transform: translateY(-10px);
+}
+
+/*-----------------------contact -----------*/
+.contact-left {
+    flex-basis: 35%;
+}
+
+.contact-right {
+    flex-basis: 60%;
+}
+
+.contact-left p {
+    margin-top: 30px;
+}
+
+.contact-left p i {
+    color: #D4AF37;
+    margin-right: 15px;
+    font-size: 30px;
+}
+
+.social-icons {
+    margin-top: 30px;
+}
+
+.social-icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: white;
+    transition: transform 0.5s;
+}
+
+.social-icons a:hover {
+    color: #D4AF37;
+    transform: translateY(-5px);
+}
+
+.btn {
+    background: black;
+    display: inline-block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #D4AF37;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+    transition: background 0.5s;
+}
+
+.btn:hover {
+    background: #D4AF37;
+}
+
+.contact-right form {
+    width 100%;
+}
+
+form input,
+form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: white;
+    padding: 15px;
+    margin: 15px 0;
+    color: black;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn {
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
 }
