--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: black;
     color: white;
@@ -167,21 +171,21 @@ nav ul li a:hover::after {
     display: block;
 }
 
-/*-------------services---------*/
+/*-------------portfolio---------*/
 
-#services {
+#portfolio {
     padding: 30px 0;
 
 }
 
-.services-list {
+.portfolio-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 60px;
     margin-top: 50px;
 }
 
-.services-list div {
+.portfolio-list div {
     background: #D4AF37;
     color: black;
     padding: 40px;
@@ -196,18 +200,18 @@ nav ul li a:hover::after {
     color: #D4AF37;
 }
 
-.services-list div i {
+.portfolio-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 
 }
 
-.services-list div h3 {
+.portfolio-list div h3 {
     font-size: 30px;
     margin-bottom: 15px;
 }
 
-.services-list div a {
+.portfolio-list div a {
     text-decoration: none;
     color: black;
     font-size: 18px;
@@ -215,7 +219,7 @@ nav ul li a:hover::after {
     display: inline-block;
 }
 
-.services-list div:hover {
+.portfolio-list div:hover {
     background-color: white;
     transform: translateY(-10px);
 }
@@ -295,4 +299,97 @@ form .btn {
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
+}
+
+.copyright {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #D4AF37;
+    font-weight: 300;
+    margin-top: 20px;
+
+}
+
+/*------------------css for small screens---------*/
+
+nav .fa-solid {
+    display: none;
+}
+
+
+@media only screen and (max-width: 600px) {
+
+    #header {
+        background-image: url(../images/backgroundphoto2.png);
+    }
+
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1 {
+        font-size: 30px;
+    }
+
+    nav .fa-solid {
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul {
+        background: #D4AF37;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fa-solid {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 40px;
+    }
+
+    .about-col-1,
+    .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .about-col-2 .aboutme {
+        font-size: 14px;
+    }
+
+    .tab-links {
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left,
+    .contact-right {
+        flex-basis: 100%;
+    }
+
+    .copyright {
+        font-size: 10px;
+    }
 }
