--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    background-image: url(../images/backgroundphoto.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 html {
@@ -17,9 +22,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(../images/backgroundphoto.png);
-    background-size: cover;
-    background-position: center;
+
 }
 
 .header-text h1 span {
@@ -196,6 +199,7 @@ nav ul li a:hover::after {
 
 }
 
+
 .sub-title span {
     color: #D4AF37;
 }
@@ -203,12 +207,18 @@ nav ul li a:hover::after {
 .portfolio-list div i {
     font-size: 50px;
     margin-bottom: 30px;
+    background: none;
 
 }
 
 .portfolio-list div h3 {
     font-size: 30px;
     margin-bottom: 15px;
+    background: none;
+}
+
+.portfolio-list p {
+    background: none;
 }
 
 .portfolio-list div a {
@@ -217,6 +227,7 @@ nav ul li a:hover::after {
     font-size: 18px;
     margin-top: 30px;
     display: inline-block;
+    background: none;
 }
 
 .portfolio-list div:hover {
@@ -278,7 +289,7 @@ nav ul li a:hover::after {
 }
 
 .contact-right form {
-    width 100%;
+    width: 100%;
 }
 
 form input,
@@ -309,6 +320,10 @@ form .btn {
     font-weight: 300;
     margin-top: 20px;
 
+}
+
+.copyright p {
+    background: none;
 }
 
 /*------------------css for small screens---------*/
